--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -1,3 +1,71 @@
 // Place all the styles related to the charges controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+/**
+ * The CSS shown here will not be introduced in the Quickstart guide, but shows
+ * how you can use CSS to style your Element's container.
+ */
+
+h1 {
+  font-family: Helvetica, sans-serif;
+  font-size: 30px;
+  text-align: center;
+  color: white;
+}
+
+button {
+  margin-top: 1rem;
+  padding: 1rem;
+  border-radius: 2px;
+  background-color: #00adee;
+  color: #fff;
+  font-size: 1.3rem;
+  transition: background-color .2s ease-in;
+  position: relative;
+  text-decoration: none;
+}
+
+.StripeElement {
+  background-color: white;
+  height: 40px;
+  padding: 10px 12px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  box-shadow: 0 1px 3px 0 #e6ebf1;
+  -webkit-transition: box-shadow 150ms ease;
+  transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus {
+  box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--invalid {
+  border-color: #fa755a;
+}
+
+.StripeElement--webkit-autofill {
+  background-color: #fefde5 !important;
+}
+
+#outsidelands-logo {
+  margin: 0 auto;
+  display: block;
+}
+
+#charges-bg {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2775ba+0,b2d8e8+100 */
+  height: 100vh;
+  background: #2775ba; /* Old browsers */
+  background: -moz-linear-gradient(top, #2775ba 0%, #b2d8e8 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #2775ba 0%,#b2d8e8 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #2775ba 0%,#b2d8e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2775ba', endColorstr='#b2d8e8',GradientType=0 ); /* IE6-9 */
+}
+
+#card-errors {
+  padding: 1rem;
+  font-family: Helvetica, sans-serif;
+  font-size: 1.3rem;
+}
