--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -14,6 +14,11 @@ h1 {
   color: white;
 }
 
+label {
+  text-align: center;
+  color: #1c75bc;
+}
+
 button {
   margin-top: 1rem;
   padding: 1rem;
@@ -57,11 +62,12 @@ button {
 #charges-bg {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2775ba+0,b2d8e8+100 */
   height: 100vh;
-  background: #2775ba; /* Old browsers */
-  background: -moz-linear-gradient(top, #2775ba 0%, #b2d8e8 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, #2775ba 0%,#b2d8e8 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom, #2775ba 0%,#b2d8e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2775ba', endColorstr='#b2d8e8',GradientType=0 ); /* IE6-9 */
+  background: url(/assets/noise-texture.png),linear-gradient(180deg,#ffda67 10%,#f2a45c 50%,#b45d90 85%);
+  // background: #2775ba; /* Old browsers */
+  // background: -moz-linear-gradient(top, #2775ba 0%, #b2d8e8 100%); /* FF3.6-15 */
+  // background: -webkit-linear-gradient(top, #2775ba 0%,#b2d8e8 100%); /* Chrome10-25,Safari5.1-6 */
+  // background: linear-gradient(to bottom, #2775ba 0%,#b2d8e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2775ba', endColorstr='#b2d8e8',GradientType=0 ); /* IE6-9 */
 }
 
 #card-errors {
