--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,19 +1,38 @@
 <%= form_tag charges_path, :id => 'payment-form' do %>
-  <div class="form-row">
+  <div>
     <h1>
       <label for="card-element">
         Outsidelands Works Donation Form
       </label>
     </h1>
-    <div id="card-element">
-      <!-- A Stripe Element will be inserted here. -->
+    <div class="row">
+      <div class="col-12">
+        <label>Phone number</label>
+        <input id="phone-input" class="form-control form-control-lg" style="text-align: center" type="text" value="<%=@phone_number%>">
+      </div>
     </div>
-    
-    <!-- Used to display form errors. -->
-    <div id="card-errors" role="alert"></div>
-  </div>
+    <br>
+    <div class="row">
+      <div class="col-12">
+        <label>Payment</label>
+        <div id="card-element">
+        <!-- A Stripe Element will be inserted here. -->
+        </div>
+      <div>
+    </div>
 
-  <button>Submit Payment</button>
+    <div class="row">
+      <div class="col-12">
+        <div id="card-errors" role="alert"></div>
+      <div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <button type="button" class="btn btn-primary">Submit Payment</button>
+      <div>
+    </div>
+
 <% end %>
 
 <%= javascript_include_tag 'application' %>
