--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -6,7 +6,7 @@
     <%= tag :meta, :name => "stripe-key", :content => ENV['PUBLISHABLE_KEY'] %>
   </head>
   <body id="charges-bg" class="container">
-    <%= image_tag('outsidelands-logo', id: 'outsidelands-logo', width: '250') %>
+    <%= image_tag('https://www.sfoutsidelands.com/uploads/ol18-outside-lands-logo-2018-large.png', id: 'outsidelands-logo', width: '250') %>
     <%= yield %>
   </body>
 </html>
