--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -7,6 +7,8 @@
  * how you can use CSS to style your Element's container.
  */
 
+@import "bootstrap";
+
 h1 {
   font-family: Helvetica, sans-serif;
   font-size: 30px;
@@ -29,29 +31,6 @@ button {
   transition: background-color .2s ease-in;
   position: relative;
   text-decoration: none;
-}
-
-.StripeElement {
-  background-color: white;
-  height: 40px;
-  padding: 10px 12px;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 #e6ebf1;
-  -webkit-transition: box-shadow 150ms ease;
-  transition: box-shadow 150ms ease;
-}
-
-.StripeElement--focus {
-  box-shadow: 0 1px 3px 0 #cfd7df;
-}
-
-.StripeElement--invalid {
-  border-color: #fa755a;
-}
-
-.StripeElement--webkit-autofill {
-  background-color: #fefde5 !important;
 }
 
 #outsidelands-logo {
