--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -4,10 +4,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= tag :meta, :name => "stripe-key", :content => ENV['PUBLISHABLE_KEY'] %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   </head>
   <body id="charges-bg" class="container">
-    <%= image_tag('https://www.sfoutsidelands.com/uploads/ol18-outside-lands-logo-2018-large.png', id: 'outsidelands-logo', width: '250') %>
-    <%= yield %>
+    <div class="mt-3 card">
+      <div class="card-body">
+        <%= image_tag('https://www.sfoutsidelands.com/uploads/ol18-outside-lands-logo-2018-large.png', id: 'outsidelands-logo', width: '250') %>
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
 <script src="https://js.stripe.com/v3/"></script>
