--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,1 +1,3 @@
-<p>Thanks, for your <strong>$5.00</strong> donation!</p>
+<div class="text-center mt-4 mb-4">
+  <h2>Thanks for your <strong>$5.00</strong> donation!</h2>
+</div>
