Add ol works logo

--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,3 +1,8 @@
 <div class="text-center mt-4 mb-4">
-  <h2>Thanks for your <strong>$5.00</strong> donation!</h2>
+  <p>Thank you for your ($ amount) donation supporting music and arts education programs.</p>
+  <p>
+    Learn more:
+  </p>
+  <a href="https://www.sfoutsidelands.com/olworks">www.sfoutsidelands.com/olworks</a>
+
 </div>
