--- a/app/assets/stylesheets/charges.scss
+++ b/app/assets/stylesheets/charges.scss
@@ -33,14 +33,13 @@ button {
   text-decoration: none;
 }
 
-#outsidelands-logo {
+#outsidelands-logo, #ol-works-logo {
   margin: 0 auto;
   display: block;
 }
 
 #charges-bg {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2775ba+0,b2d8e8+100 */
-  height: 100vh;
   background: url(/assets/noise-texture.png),linear-gradient(180deg,#ffda67 10%,#f2a45c 50%,#b45d90 85%);
   // background: #2775ba; /* Old browsers */
   // background: -moz-linear-gradient(top, #2775ba 0%, #b2d8e8 100%); /* FF3.6-15 */
