--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag charges_path, :id => 'payment-form' do %>
   <div>
-    <p class="text-center text-secondary mt-3">
+    <p class="text-center text-secondary">
       Dontation Amount:
     </p>
     <div class="text-center">
@@ -25,8 +25,19 @@
         <input id="phone-input" class="form-control form-control-lg" style="text-align: center" type="text" value="<%=@phone_number%>">
       </div>
     </div>
-    <br>
     <div class="row">
+      <div class="col-12 mt-3">
+        <label class="text-secondary">First Name</label>
+        <input id="first-name" class="form-control form-control-lg" type="text" value="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 mt-3">
+        <label class="text-secondary">Last Name</label>
+        <input id="last-name" class="form-control form-control-lg" type="text" value="">
+      </div>
+    </div>
+    <div class="row mt-3">
       <div class="col-12">
         <label class="text-secondary">Payment</label>
         <div id="card-element" class="form-control form-control-lg">
@@ -50,5 +61,6 @@
     <input id="price-input" type="hidden" value="">
 
 <% end %>
+
 
 <%= javascript_include_tag 'application' %>
