--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -8,10 +8,20 @@
 
   </head>
   <body id="charges-bg" class="container">
-    <div class="mt-3 card">
+    <div class="mt-3 mb-3 card">
       <div class="card-body">
-        <%= image_tag('https://www.sfoutsidelands.com/uploads/ol18-outside-lands-logo-2018-large.png', id: 'outsidelands-logo', width: '250') %>
+        <%= image_tag('OLWorks-logo-blue.png', id: 'ol-works-logo', width: '100%') %>
         <%= yield %>
+
+        <p class="text-center text-secondary mt-3">
+          Presented by:
+        </p>
+        <%= image_tag('outsidelands-logo.png', id: 'outsidelands-logo', width: '250') %>
+        <div class="text-center mt-3">
+          <a href="https://www.sfoutsidelands.com/privacy-policy/">Privacy Policy | </a>
+          <a href="https://www.sfoutsidelands.com/terms-of-use/">Terms of Use | </a>
+          <a href="mailto:info@sfoutsidlands.com">Site Feedback</a>
+        </div>
       </div>
     </div>
   </body>
