--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center mt-4 mb-4">
-  <p>Thank you for your ($ amount) donation supporting music and arts education programs.</p>
+  <h4>Thank you for your $<%= @amount_param %> donation supporting music and arts education programs.</h4>
   <p>
-    Learn more:
+    Learn more about our work:
   </p>
   <a href="https://www.sfoutsidelands.com/olworks">www.sfoutsidelands.com/olworks</a>
 
