--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -4,13 +4,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= tag :meta, :name => "stripe-key", :content => ENV['PUBLISHABLE_KEY'] %>
+
+    <meta property="og:title" content="Donate to Outside Lands Works" />
+    <meta property="og:image" content="<%= image_path('OLWorks-logo-blue.png') %>" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   </head>
   <body id="charges-bg" class="container">
     <div class="mt-3 mb-3 card">
       <div class="card-body">
-        <%= image_tag('OLWorks-logo-blue.png', id: 'ol-works-logo', width: '100%') %>
+        <%= image_tag('OLWorks-logo-blue.png', id: 'ol-works-logo') %>
         <%= yield %>
 
         <p class="text-center text-secondary mt-3">
